--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -39,6 +39,7 @@
             android:gravity="center"
             android:padding="4sp"
             android:text="LIGHT"
+            android:fontFamily="sans-serif-smallcaps"
             android:textColor="#000000" />
 
     </LinearLayout>
