--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -10,19 +10,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="100sp"
         android:orientation="vertical"
+        android:id="@+id/ll"
         android:background="@drawable/card_background">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="60sp"
+            android:clickable="false"
             android:id="@+id/frameLayout">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/imageView"
+                android:layout_margin="5sp"
                 android:background="@color/colorPrimaryDark"
                 android:padding="10sp"/>
 
